[project]
name = "pm-tools"
version = "0.1.0"
description = "Encrypted GUI password manager"
requires-python = ">=3.8"
dependencies = [
  "pycryptodome",
  "python-dotenv"
]

[project.scripts]
pm_tools = "pm_tools.code:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
